added torch dataset and dataloaders

--- a/notebooks/NLP_Project_Draft.ipynb
+++ b/notebooks/NLP_Project_Draft.ipynb
@@ -7,24 +7,7 @@
    "outputs": [
     {
      "data": {
-      "application/javascript": [
-       "\n",
-       "            setTimeout(function() {\n",
-       "                var nbb_cell_id = 1;\n",
-       "                var nbb_unformatted_code = \"%load_ext nb_black\\n%load_ext pycodestyle_magic \\n%pycodestyle_on \";\n",
-       "                var nbb_formatted_code = \"%load_ext nb_black\\n%load_ext pycodestyle_magic\\n%pycodestyle_on\";\n",
-       "                var nbb_cells = Jupyter.notebook.get_cells();\n",
-       "                for (var i = 0; i < nbb_cells.length; ++i) {\n",
-       "                    if (nbb_cells[i].input_prompt_number == nbb_cell_id) {\n",
-       "                        if (nbb_cells[i].get_text() == nbb_unformatted_code) {\n",
-       "                             nbb_cells[i].set_text(nbb_formatted_code);\n",
-       "                        }\n",
-       "                        break;\n",
-       "                    }\n",
-       "                }\n",
-       "            }, 500);\n",
-       "            "
-      ],
+      "application/javascript": "\n            setTimeout(function() {\n                var nbb_cell_id = 1;\n                var nbb_unformatted_code = \"%load_ext nb_black\\n%load_ext pycodestyle_magic \\n%pycodestyle_on \";\n                var nbb_formatted_code = \"%load_ext nb_black\\n%load_ext pycodestyle_magic\\n%pycodestyle_on\";\n                var nbb_cells = Jupyter.notebook.get_cells();\n                for (var i = 0; i < nbb_cells.length; ++i) {\n                    if (nbb_cells[i].input_prompt_number == nbb_cell_id) {\n                        if (nbb_cells[i].get_text() == nbb_unformatted_code) {\n                             nbb_cells[i].set_text(nbb_formatted_code);\n                        }\n                        break;\n                    }\n                }\n            }, 500);\n            ",
       "text/plain": [
        "<IPython.core.display.Javascript object>"
       ]
@@ -175,8 +158,8 @@
       "Length: 35075 (34K) [image/jpeg]\n",
       "Saving to: ‘240_F_177243386_Luk2Jzj6QO7uWxOJuNTrX8TfPZFVqMj1.jpg’\n",
       "\n",
-      "\r",
-      "          240_F_177   0%[                    ]       0  --.-KB/s               \r",
+      "\r\n",
+      "          240_F_177   0%[                    ]       0  --.-KB/s               \r\n",
       "240_F_177243386_Luk 100%[===================>]  34.25K  --.-KB/s    in 0.003s  \n",
       "\n",
       "2023-06-15 10:09:27 (10.0 MB/s) - ‘240_F_177243386_Luk2Jzj6QO7uWxOJuNTrX8TfPZFVqMj1.jpg’ saved [35075/35075]\n",
@@ -1523,7 +1506,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
