fixed flikr8k evaluation for our problem

--- a/notebooks/clip_check_flickr8k.ipynb
+++ b/notebooks/clip_check_flickr8k.ipynb
@@ -72,7 +72,6 @@
     "        self.transform = transform\n",
     "        self.df = pd.read_csv(captions_file)\n",
     "        self.df['image'] = self.df['image'].apply(lambda x: os.path.join(self.image_folder, x))\n",
-    "        print(self.df)\n",
     "\n",
     "    def __len__(self):\n",
     "        return len(self.df)\n",
@@ -80,10 +79,24 @@
     "    def __getitem__(self, idx):\n",
     "        row = self.df.iloc[idx]\n",
     "        image_path, caption = row['image'], row['caption']\n",
-    "        image = Image.open(image_path).convert('RGB')\n",
+    "        target_image = Image.open(image_path).convert('RGB')\n",
     "        if self.transform:\n",
-    "            image = self.transform(image)\n",
-    "        return image, caption"
+    "            target_image = self.transform(target_image)\n",
+    "\n",
+    "        candidate_images = list(self.df['image'].sample(10).values)\n",
+    "        for idx in range(len(candidate_images)):\n",
+    "            candidate_images[idx] = Image.open(candidate_images[idx]).convert(\"RGB\")\n",
+    "            if self.transform:\n",
+    "                candidate_images[idx] = self.transform(candidate_images[idx])\n",
+    "                \n",
+    "        candidate_images = torch.stack(candidate_images)\n",
+    "\n",
+    "        sample = {\n",
+    "            \"caption\": caption,\n",
+    "            \"target\": torch.Tensor(target_image),\n",
+    "            \"candidate_images\": candidate_images,\n",
+    "        }\n",
+    "        return sample"
    ]
   },
   {
@@ -224,7 +237,7 @@
     "    def __init__(self, model_name):\n",
     "        super().__init__()\n",
     "        self.model = CLIPModel.from_pretrained(model_name)\n",
-    "        self.processor = CLIPProcessor.from_pretrained(model_name, do_rescale=False)\n",
+    "        self.processor = CLIPProcessor.from_pretrained(model_name)\n",
     "\n",
     "        self.device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "        self.model = self.model.to(self.device)\n",
@@ -294,12 +307,17 @@
     "    phrases = []  # store input phrases for further analysis\n",
     "    all_probs = []  # store the probabilities for further analysis\n",
     "\n",
+    "    loop = tqdm(enumerate(data_loader), total=len(data_loader))\n",
     "\n",
     "    with torch.no_grad():\n",
-    "        for images, captions in tqdm(data_loader):\n",
-    "            phrases.extend(list(captions))\n",
+    "        for _, batch in loop:\n",
+    "            texts = batch[\"caption\"]\n",
+    "            phrases.extend(list(texts))\n",
     "\n",
-    "            logits = model(images, captions)\n",
+    "            target, candidate_images = batch[\"target\"], batch[\"candidate_images\"]\n",
+    "            images = torch.cat([target.unsqueeze(1), candidate_images], dim=1)\n",
+    "\n",
+    "            logits = model(images, texts)\n",
     "            probs = F.softmax(logits, dim=1)\n",
     "\n",
     "            _, top_indices = torch.max(probs, dim=1)\n",
