added evaluation code for all models on flickr30k

--- a/notebooks/align-check-flickr30k.ipynb
+++ b/notebooks/align-check-flickr30k.ipynb
@@ -291,32 +291,34 @@
    "outputs": [],
    "source": [
     "import torch\n",
-    "from transformers import CLIPModel as CLIP, CLIPProcessor\n",
+    "from PIL import Image\n",
+    "from torchvision import transforms\n",
+    "from transformers import AlignProcessor, AlignModel\n",
     "\n",
     "\n",
-    "class CLIPModel(BaseModel):\n",
+    "class ALIGNMODEL(BaseModel):\n",
     "    \"\"\"\n",
-    "    https://huggingface.co/docs/transformers/model_doc/clip\n",
+    "    https://huggingface.co/docs/transformers/model_doc/align\n",
     "    \"\"\"\n",
     "\n",
     "    def __init__(self, model_name):\n",
     "        super().__init__()\n",
-    "        self.model = CLIP.from_pretrained(model_name)\n",
-    "        self.processor = CLIPProcessor.from_pretrained(model_name, do_rescale=False)\n",
+    "        self.model = AlignModel.from_pretrained(model_name)\n",
+    "        self.processor = AlignProcessor.from_pretrained(model_name)\n",
     "\n",
     "        self.device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "        self.model = self.model.to(self.device)\n",
     "\n",
     "    def process_image(self, images: torch.Tensor) -> torch.Tensor:\n",
-    "        processed_images = self.processor(images=images, return_tensors=\"pt\", dim=2).to(\n",
+    "        processed_images = self.processor(images=images, return_tensors=\"pt\").to(\n",
     "            self.device\n",
     "        )\n",
     "        return processed_images\n",
     "\n",
-    "    def process_text(self, text: str) -> torch.Tensor:\n",
-    "        processed_texts = self.processor(\n",
-    "            text=text, return_tensors=\"pt\", padding=True\n",
-    "        ).to(self.device)\n",
+    "    def process_text(self, texts: list[str]) -> torch.Tensor:\n",
+    "        processed_texts = self.processor(text=texts, return_tensors=\"pt\").to(\n",
+    "            self.device\n",
+    "        )\n",
     "        return processed_texts\n",
     "\n",
     "    def forward(self, images: torch.Tensor, texts: list[str]) -> torch.Tensor:\n",
@@ -565,8 +567,8 @@
     }
    ],
    "source": [
-    "model_name = \"openai/clip-vit-base-patch32\"\n",
-    "model = CLIPModel(model_name=model_name)\n",
+    "model_name = \"kakaobrain/align-base\"\n",
+    "model = ALIGNMODEL(model_name=model_name)\n",
     "\n",
     "print(model.device)"
    ]
