--- a/notebooks/blip-check-flickr30k.ipynb
+++ b/notebooks/blip-check-flickr30k.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "c800067f",
    "metadata": {
     "execution": {
@@ -20,21 +20,12 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/lib/python3.10/site-packages/scipy/__init__.py:146: UserWarning: A NumPy version >=1.16.5 and <1.23.0 is required for this version of SciPy (detected version 1.24.3\n",
-      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "from typing import Literal, Optional\n",
-    "\n",
     "import random\n",
+    "\n",
     "import pandas as pd\n",
     "import PIL\n",
     "import torch\n",
@@ -104,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "44982cc3",
    "metadata": {
     "execution": {
@@ -186,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "cf453e3b",
    "metadata": {
     "execution": {
@@ -270,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "5b2d3e19",
    "metadata": {
     "execution": {
@@ -291,32 +282,34 @@
    "outputs": [],
    "source": [
     "import torch\n",
-    "from transformers import CLIPModel as CLIP, CLIPProcessor\n",
+    "from PIL import Image\n",
+    "from torchvision import transforms\n",
+    "from transformers import BlipModel, BlipProcessor\n",
     "\n",
     "\n",
-    "class CLIPModel(BaseModel):\n",
+    "class BLIPMODEL(BaseModel):\n",
     "    \"\"\"\n",
-    "    https://huggingface.co/docs/transformers/model_doc/clip\n",
+    "    https://huggingface.co/docs/transformers/model_doc/blip\n",
     "    \"\"\"\n",
     "\n",
     "    def __init__(self, model_name):\n",
     "        super().__init__()\n",
-    "        self.model = CLIP.from_pretrained(model_name)\n",
-    "        self.processor = CLIPProcessor.from_pretrained(model_name, do_rescale=False)\n",
+    "        self.model = BlipModel.from_pretrained(model_name)\n",
+    "        self.processor = BlipProcessor.from_pretrained(model_name)\n",
     "\n",
     "        self.device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "        self.model = self.model.to(self.device)\n",
     "\n",
     "    def process_image(self, images: torch.Tensor) -> torch.Tensor:\n",
-    "        processed_images = self.processor(images=images, return_tensors=\"pt\", dim=2).to(\n",
+    "        processed_images = self.processor(images=images, return_tensors=\"pt\").to(\n",
     "            self.device\n",
     "        )\n",
     "        return processed_images\n",
     "\n",
-    "    def process_text(self, text: str) -> torch.Tensor:\n",
-    "        processed_texts = self.processor(\n",
-    "            text=text, return_tensors=\"pt\", padding=True\n",
-    "        ).to(self.device)\n",
+    "    def process_text(self, texts: list[str]) -> torch.Tensor:\n",
+    "        processed_texts = self.processor(text=texts, return_tensors=\"pt\").to(\n",
+    "            self.device\n",
+    "        )\n",
     "        return processed_texts\n",
     "\n",
     "    def forward(self, images: torch.Tensor, texts: list[str]) -> torch.Tensor:\n",
@@ -339,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "42ef918e",
    "metadata": {
     "execution": {
@@ -425,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "a28ba05e",
    "metadata": {
     "execution": {
@@ -443,137 +436,17 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d9946fdc8baa45fdbf3a23faeac0123d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "config.json:   0%|          | 0.00/4.19k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "581fa62eaf704b0a9b8815f140b90b1e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "pytorch_model.bin:   0%|          | 0.00/605M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a05481408fa64e1188d1564078f241c0",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "preprocessor_config.json:   0%|          | 0.00/316 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "442721ce2cf04768b985790555dcc46a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "tokenizer_config.json:   0%|          | 0.00/568 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "93968e14070f4c2b94746d09653bb73e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "vocab.json:   0%|          | 0.00/862k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "57c15d6bab8d47739fdfe623ac0841a9",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "merges.txt:   0%|          | 0.00/525k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e490b84d458148b8aac5dd0769c6a4de",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "tokenizer.json:   0%|          | 0.00/2.22M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b599f707d40647e6bba62a20efdf8986",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "special_tokens_map.json:   0%|          | 0.00/389 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cuda\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "model_name = \"openai/clip-vit-base-patch32\"\n",
-    "model = CLIPModel(model_name=model_name)\n",
+    "model_name = \"Salesforce/blip-image-captioning-base\"\n",
+    "model = BLIPMODEL(model_name=model_name)\n",
     "\n",
     "print(model.device)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "0badaed3",
    "metadata": {
     "execution": {
@@ -605,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "82438205",
    "metadata": {
     "execution": {
@@ -623,22 +496,14 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 248/248 [1:15:34<00:00, 18.28s/it]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "res = evaluate_model(model, loader)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "9e86267f",
    "metadata": {
     "execution": {
@@ -656,23 +521,7 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'accuracy': 1.0,\n",
-       " 'f1': 1.0,\n",
-       " 'precision': 1.0,\n",
-       " 'recall': 1.0,\n",
-       " 'mrr': 1.0,\n",
-       " 'time': 4534.443663358688}"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "res"
    ]
@@ -709,7 +558,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.2"
   },
   "papermill": {
    "default_parameters": {},
