--- a/notebooks/bridgetower-check-flickr30k.ipynb
+++ b/notebooks/bridgetower-check-flickr30k.ipynb
@@ -291,48 +291,41 @@
    "outputs": [],
    "source": [
     "import torch\n",
-    "from transformers import CLIPModel as CLIP, CLIPProcessor\n",
+    "from transformers import BridgeTowerForImageAndTextRetrieval, BridgeTowerProcessor\n",
     "\n",
     "\n",
-    "class CLIPModel(BaseModel):\n",
+    "class BridgeTowerModel(BaseModel):\n",
     "    \"\"\"\n",
-    "    https://huggingface.co/docs/transformers/model_doc/clip\n",
+    "    https://huggingface.co/docs/transformers/model_doc/bridgetower\n",
     "    \"\"\"\n",
     "\n",
     "    def __init__(self, model_name):\n",
     "        super().__init__()\n",
-    "        self.model = CLIP.from_pretrained(model_name)\n",
-    "        self.processor = CLIPProcessor.from_pretrained(model_name, do_rescale=False)\n",
+    "        self.model = BridgeTowerForImageAndTextRetrieval.from_pretrained(model_name)\n",
+    "        self.processor = BridgeTowerProcessor.from_pretrained(model_name, do_rescale=False)\n",
     "\n",
     "        self.device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "        self.model = self.model.to(self.device)\n",
     "\n",
-    "    def process_image(self, images: torch.Tensor) -> torch.Tensor:\n",
-    "        processed_images = self.processor(images=images, return_tensors=\"pt\", dim=2).to(\n",
-    "            self.device\n",
-    "        )\n",
-    "        return processed_images\n",
-    "\n",
-    "    def process_text(self, text: str) -> torch.Tensor:\n",
-    "        processed_texts = self.processor(\n",
-    "            text=text, return_tensors=\"pt\", padding=True\n",
-    "        ).to(self.device)\n",
-    "        return processed_texts\n",
+    "    def process_image_text(self, image: torch.Tensor, text: str) -> torch.Tensor:\n",
+    "        encoding = self.processor(image, text, return_tensors=\"pt\").to(self.device)\n",
+    "        return encoding\n",
+    "    \n",
+    "    def process_image():\n",
+    "        pass\n",
+    "    \n",
+    "    def process_text():\n",
+    "        pass\n",
     "\n",
     "    def forward(self, images: torch.Tensor, texts: list[str]) -> torch.Tensor:\n",
     "        images = images.to(self.device)\n",
     "        logits = torch.zeros(images.shape[0], images.shape[1])\n",
     "\n",
-    "        for idx, sample_images in enumerate(images):\n",
-    "            processed_sample_images = self.process_image(sample_images)\n",
-    "            processed_phrase = self.process_text(texts[idx])\n",
-    "\n",
-    "            output = self.model(\n",
-    "                input_ids=processed_phrase.input_ids,\n",
-    "                pixel_values=processed_sample_images.pixel_values,\n",
-    "                return_dict=True,\n",
-    "            )\n",
-    "            logits[idx] = output.logits_per_image.squeeze(1)\n",
+    "        for batch_idx, sample_images in enumerate(images):\n",
+    "            for candidate_idx, candidate_image in enumerate(sample_images):\n",
+    "                encoding = self.process_image_text(candidate_image, texts[batch_idx])\n",
+    "                outputs = self.model(**encoding)\n",
+    "                logits[batch_idx][candidate_idx] = outputs.logits[0, 1].item()\n",
     "\n",
     "        return logits"
    ]
@@ -565,8 +558,8 @@
     }
    ],
    "source": [
-    "model_name = \"openai/clip-vit-base-patch32\"\n",
-    "model = CLIPModel(model_name=model_name)\n",
+    "model_name = \"BridgeTower/bridgetower-base-itm-mlm\"\n",
+    "model = BridgeTowerModel(model_name=model_name)\n",
     "\n",
     "print(model.device)"
    ]
