updated CLIP fine-tuning

--- a/notebooks/clip_finetune.ipynb
+++ b/notebooks/clip_finetune.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "fdbe9f29",
    "metadata": {
     "papermill": {
@@ -19,75 +19,22 @@
     "import sys\n",
     "sys.path.append('../')\n",
     "sys.path.append(\"../src/\")\n",
-    "sys.path.append(\"../src/models/\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "8b81f810",
-   "metadata": {
-    "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
-    "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
-    "papermill": {
-     "duration": 427.363144,
-     "end_time": "2023-12-30T18:04:50.604560",
-     "exception": false,
-     "start_time": "2023-12-30T17:57:43.241416",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
+    "sys.path.append(\"../src/models/\")\n",
+    "\n",
     "from src.visual_wsd_downloader import VisualWSDDownloader, VisualWSDRestructurer\n",
-    "from src.datasets import VisualWSDDataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "8a71e47b",
-   "metadata": {
-    "papermill": {
-     "duration": 0.049084,
-     "end_time": "2023-12-30T18:04:56.285748",
-     "exception": false,
-     "start_time": "2023-12-30T18:04:56.236664",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
+    "from src.datasets import VisualWSDDataset\n",
+    "\n",
     "from src.utils import *\n",
     "from src.models.base_model import BaseModel\n",
-    "from src.models.clip_finetune import CustomCLIPModel"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "fc9c4bb3",
-   "metadata": {
-    "papermill": {
-     "duration": 0.048895,
-     "end_time": "2023-12-30T18:04:56.361799",
-     "exception": false,
-     "start_time": "2023-12-30T18:04:56.312904",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
+    "from src.models.clip_finetune import CustomCLIPModel\n",
+    "\n",
     "from src.losses import TripletLoss, ContrastiveLoss, CrossEntropyLoss\n",
     "from src.train import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "21787433",
    "metadata": {
     "papermill": {
@@ -108,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "c997d5a5",
    "metadata": {
     "papermill": {
@@ -120,25 +67,17 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "mps\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model_name = \"openai/clip-vit-base-patch32\"\n",
-    "model = CustomCLIPModel(model_name=model_name)\n",
     "\n",
+    "model = CustomCLIPModel(model_name=model_name)\n",
     "print(model.device)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "73ce8ad2",
    "metadata": {
     "papermill": {
@@ -152,36 +91,20 @@
    },
    "outputs": [],
    "source": [
+    "datasetPath = '../data/visual_wsd'\n",
+    "\n",
     "train_loader, val_loader = get_loaders(\n",
-    "    path = '../data/visual_wsd',\n",
+    "    path = datasetPath,\n",
     "    csv_file = 'dataset.csv',\n",
     "    images_folder = 'images',\n",
     "    transform = transform,\n",
     "    mode = \"train\",\n",
-    "    batch_size = 8,\n",
+    "    batch_size = 4,\n",
     "    num_workers = 4\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "ac57247a",
-   "metadata": {
-    "papermill": {
-     "duration": 0.035953,
-     "end_time": "2023-12-30T18:05:25.321714",
-     "exception": false,
-     "start_time": "2023-12-30T18:05:25.285761",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
+    ")\n",
+    "\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=0.0001)\n",
     "\n",
-    "# loss_fn = ContrastiveLoss()\n",
     "loss_fn = CrossEntropyLoss()"
    ]
   },
@@ -199,32 +122,7 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model CustomCLIPModel started training, device: mps\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|                                                                                                                                             | 1/1448 [01:03<25:25:00, 63.23s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Corrupted image, placeholder image used. Error message: image file is truncated (31 bytes not processed)\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_model(model, train_loader, val_loader, optimizer, loss_fn, 8)"
    ]
